--- a/styles/pages/_design.scss
+++ b/styles/pages/_design.scss
@@ -263,16 +263,16 @@
       nav{
         margin:0 0 1rem 0;
 
-        @media #{$screen-sm-min} {
-          margin:0 0 4rem 0;
-        }
-
         button{
           font-family: $font-sans-serif;
           font-size:1rem;
           letter-spacing: 2px;
           text-transform: uppercase;
-          margin:0 4rem 0 0;
+          margin:0 2rem 0 0;
+
+          @media #{$screen-sm-min} {
+            margin:0 4rem 0 0;
+          }
 
           &[data-active="true"] {
             &:after{
